examples/test/testpolicy13624.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13624
  namespace: namespace104
spec:
  podSelector:
    matchLabels:
      key12: value8
      key29: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value41
          key30: value26
      podSelector:
        matchLabels:
          key45: value11
          key33: value8
          key12: value32
